--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "Sales-Viethas-POS",
-  "description": "A Sales POS App from Viethas",
+  "description": "The Sales POS App from Viethas",
   "version": "1.0.0",
   "main": "./build/index.js",
-  
   "repository": {
     "type": "git",
     "url": "https://github.com/Viethas-App/Sales-Viethas-POS-Comercial-Update.git"
@@ -23,10 +22,10 @@
     "@capacitor-community/electron": "^1.3.1",
     "@types/fs-extra": "^9.0.7",
     "electron-log": "^4.3.5",
-    "electron-updater": "^4.3.9"
+    "electron-updater": "4.3.9"
   },
   "devDependencies": {
-    "electron": "10.3.1",
+    "electron": "10.4.7",
     "electron-builder": "22.9.1",
     "typescript": "~4.0.5"
   },
@@ -54,7 +53,10 @@
     "mac": {
       "artifactName": "${productName}-${version}-mac.${ext}",
       "category": "public.app-category.developer-tools",
-      "target": ["dmg", "zip"],
+      "target": [
+        "dmg",
+        "zip"
+      ],
       "icon": "./assets/appIcon.png"
     },
     "win": {
